# ortho_mapper

./: CMakeLists.txt  README.md
config/: cfg.json
include/: alignment.h  blender.h  gps.h  ortho.h  terr.h  utils.h
src/: gps.cpp  main.cpp  ortho.cpp  terr.cpp  utils.cpp
